Fixing issue with display on mobile

--- a/packages/bpk-component-carousel/src/BpkCarousel.scss
+++ b/packages/bpk-component-carousel/src/BpkCarousel.scss
@@ -39,9 +39,5 @@
     @include bpk-breakpoint-tablet {
       margin-right: .625rem;
     }
-
-    @include bpk-breakpoint-mobile {
-      margin-right: 0;
-    }
   }
 }
